Made list of all env variables that start with T inside t-vars.env

--- a/private/files/t-vars.env
+++ b/private/files/t-vars.env
@@ -1,2 +1,7 @@
 List of env vars that begin with T
 
+TERM_PROGRAM=Apple_Terminal
+TERM=xterm-256color
+TMPDIR=/var/folders/d2/c_5fqx_s5cj945g7x40_s52h0000gn/T/
+TERM_PROGRAM_VERSION=326
+TERM_SESSION_ID=19BFA7FA-D002-4389-963A-D22375D60E31
